# django-denied

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
requirements/: dev.txt  py310-django42.txt  py312-django50.txt  py39-django32.txt  py39-django40.txt  py39-django41.txt
src/denied/: authorizers.py  decorators.py  middleware.py
tests/: conftest.py  nested_urls.py  settings.py  test_authorizers.py  test_decorators.py  test_middleware.py  urls.py
