[metadata]
name = django-denied
version = 1.0
description = An authorization system based exclusively on allow lists
url = https://github.com/mblayman/django-denied
license = MIT
author = Matt Layman
author_email = matthewlayman@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Django
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    Django>=3.2

[options.packages.find]
where = src

[coverage:run]
branch = True
parallel = True
source =
    denied
    tests

[coverage:paths]
source =
   src
   .tox/*/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 88
ignore = E203, W503
